# digital-library

./: .gitignore  Procfile  README.md  requirements.txt
backend/: .gitignore  main.py  mkdocs.yml  pyproject.toml  requirements.txt  vercel.json
backend/api/: .env  database.py  main.py  schemas.py  services.py  settings.py  users.py
backend/api/db_utils/: database.py  document_crud.py  s3_base.py  s3_crud.py  user_crud.py
backend/api/dependecies/: auth_dependency.py
backend/api/helper_utils/: services.py
backend/api/routers/: auth.py  document_router.py  schemas.py  user_router.py  users.py
backend/api/schema/: models.py  schemas.py
backend/api/server/: app.py  database.py  models.py
backend/api/service_utils/: handlefile.py  services.py
backend/docs/: index.md
frontend/: .env  .firebaserc  next.config.js  package-lock.json  package.json  store.js
frontend/features/authentication/: Loading.js  SignIn.js  authenticationSlice.js
frontend/firebase/: clientApp.js
frontend/functions/: index.js  package-lock.json  package.json
frontend/pages/: _app.js  auth.js  index.js
frontend/pages/api/: hello.js  listrecord.js
frontend/pages/calendar/: index.js
frontend/pages/home/: index.js
frontend/pages/login/: index.js
frontend/pages/reading/: index.js
frontend/pages/upload/: index.js
frontend/services/: auth.services.js
frontend/src/components/: Copyright.js  Header.js  Layout.js  Main.js  MobileBar.js  Navigation.js  Reading.js  Stories.js  Thumbnails.js
frontend/src/components/Home/: DocPreview.js  Main.js  ProjPreview.js  Stories.js
