[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Mechanical digital library backend api"
authors = ["reechee <richardokonicha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
